<resources>
    <string name="app_name">Kelvin 1.1</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="surname">surname</string>
    <string name="title_activity_user_account">UserAccount</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="by_clicking_the_submit_button_below_you_confirm_that_you_are_in_agreement_with_the_terms_and_conditions_of_kev_the_barber_please_view_our_terms_and_conditions_for_administering_our_services">by_clicking_the_submit_button_below_you_confirm_that_you_are_in_agreement_with_the_terms_and_conditions_of_kev_the_barber_please_view_our_terms_and_conditions_for_administering_our_services</string>
    <string name="phone">phone</string>
    <string name="contact_information">contact_information</string>
    <string name="submit_infomation">submit_infomation</string>
    <string name="personal_infomation">Personal Infomation</string>
    <string name="name">name</string>
    <string name="contact_informationn">Contact Information</string>
    <string name="sign_out">Sign Out</string>
    <string name="search">Search</string>
    <string name="working_progress">Working Progress</string>
    <string name="terms_and_conditions">by clicking the submit button below you confirm that you are in agreement with the terms and conditions of kev the barber please view our terms and conditions for administering our services</string>
    <string name="services">Services</string>
    <string name="submitinfomation">Submit Infomation</string>
</resources>